--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "paragonie/random_compat": "2.*",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+        "fideloper/proxy": "~4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
