--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "doctrine/dbal": "^3.6",
+        "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "paragonie/random_compat": "2.*",
-        "tymon/jwt-auth": "^2.0",
-        "fideloper/proxy": "~4.0"
+        "ramsey/uuid": "^4.7",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
